--- a/ucapan-ultah-main/gambar.html
+++ b/ucapan-ultah-main/gambar.html
@@ -7,11 +7,15 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-	  <audio class="song" loop>
-    <source src="./music/hbd.mp3">
-    </source>
-    Your browser isn't invited for super fun audio time.
-  </audio>
+<div class="judul_vidio">
+            <h1>Di Play dulu musiknya sayang</h1>
+        </div>
+     <div class="audio-container">
+    <audio id="myAudio">
+        <source src="Sempurna.mp3" type="audio/mpeg">
+        </audio>
+        <button id="toggleButton" class="audio-button">Play</button>
+    </div>
     <div style="position: relative; width: 100%; height: 0; padding-top: 177.7778%;
  padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
  border-radius: 8px; will-change: transform;">
