--- a/ucapan-ultah-main/gambar.html
+++ b/ucapan-ultah-main/gambar.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-<div class="judul_vidio">
+	<div class="judul_vidio">
             <h1>Di Play dulu musiknya sayang</h1>
         </div>
      <div class="audio-container">
@@ -23,6 +23,7 @@
     src="https://www.canva.com/design/DAGz4Rjabew/EEYvdxF9Tc9k4IoMpiPdVw/view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
   </iframe>
 </div>
+<a> Ni ta kasi </a> <a href="https://www.canva.com/design/DAG1Ir2evh8/Ie27EbqagNIOkzbfQPNqjg/view" target="_blank" rel="noopener">bonus</a> sayang
        <div class="judul_vidio">
     <h1>Kasih tau aku kalo kamu udah selesai nonton ya sayang</h1>
 </div>
