--- a/ucapan-ultah-main/gambar.html
+++ b/ucapan-ultah-main/gambar.html
@@ -23,7 +23,9 @@
     src="https://www.canva.com/design/DAGz4Rjabew/EEYvdxF9Tc9k4IoMpiPdVw/view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
   </iframe>
 </div>
-       <div class="judul_vidio">
+<p>
+        Ni ta kasi <a href="/1008.mp4">bonus</a>
+    </p>       <div class="judul_vidio">
     <h1>Kasih tau aku kalo kamu udah selesai nonton ya sayang</h1>
 </div>
 <div class="video_box">
